css/layouts/_blog.scss
.filter-list {
  .btn-outline-primary {
    color: var(--black);

    &:focus {
      box-shadow: none;
    }

    &:hover {
      background: none;
    }
  }

  .btn-check:checked + .btn-outline-primary {
    color: var(--primary-color);
    background: none;
    border: none;
    border-bottom: 1px solid var(--primary-color);
    font-weight: 500;

    &:focus {
      box-shadow: none;
    }
  }
  .btn-check:focus + .btn-outline-primary {
    box-shadow: none;
  }
}

.posts-list {

  .gutter-sizer {
    width: 1%;
  }

  a.post {
    text-decoration: none;
    color: initial;
  }

  .grid-sizer,
  .post {
    width: calc(50% - 10px);

    @include media-breakpoint-up(lg) {
      width: 24%;
    }
  }

  .post .extract {
    display: none;
  }

  .post:nth-child(5n+1) {
    width: 100%;

    @include media-breakpoint-up(lg) {
      width: 49%;
    }

    .extract {
      display: block;
    }
  }
}

.pagination {
  .page-link {
    padding: 0;
    font-size: 1.15rem;
  }

  .active {
    border-bottom: 1px solid var(--primary-color);
    border-radius: 0;
  }
}

.post-content {

  @include media-breakpoint-up(lg) {
    #shareBox {
      width: 20vw;
    }
  }

  header {
    background-color: var(--white);
  }

  img {
    border-radius: 25px;
  }

  article {
    z-index: 5;

    & > :last-child {
      border-bottom: 1px solid var(--grey);
      padding-bottom: 1rem;
    }

    & > p {
      font-size: 1.15rem;
      font-weight: normal;

      strong {
        color: var(--black);
      }
    }

    & > h2 {
      color: var(--black);
      font-size: 1.5rem;
      margin-top: 2rem;
      margin-bottom: 2rem;
    }

    & > blockquote {
      color: var(--primary-color);
      font-size: 1.5rem;
      font-style: italic;
      font-weight: normal;
      //margin-right: 1rem;
    }

    & > img {
      width: 100%;
      margin: 2rem auto;
      display: block;

      @include media-breakpoint-up(lg) {
        width: 70vw;
      }
    }

    // YouTube videos
    & > iframe {
      margin: 2rem auto;
      display: block;
    }
  }

  address {
    a {
      text-decoration: none;
    }

    .social-bar {
      margin: 0 !important;
    }

    .social-invite {
      font-weight: 500;
      font-size: $lead-font-size !important;
      color: var(--black);
      margin-bottom: 0;
    }
  }


  .social-invite {
    color: var(--primary-color);
    font-size: calc(1.3rem + 0.6vw) !important;
  }

  .social svg {
    fill: var(--tertiary-color);
  }
}

